# sports-score-ticker

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  main.py  nba.py  nfl.py
config/: ticker.json
deploy/: cross-build-pi.sh  install.sh  led-ticker.service  push-to-pi.sh  score-fetcher.service
display/: CMakeLists.txt
display/src/: logo_cache.c  logo_cache.cpp  logo_cache.h  logo_cache.hpp  main.c  main.cpp  score_reader.c  score_reader.cpp  score_reader.h  score_reader.hpp  text_render.h  ticker.c  ticker.cpp  ticker.h  ticker.hpp
docs/: configuration.md  cross-compiling.md  hardware-setup.md
fetcher/: download_logos.py  espn.py  models.py  requirements.txt  score_fetcher.py
other/: CE3E3V2_2x2_center_bracket_v0.3mf  CE3E3V2_2x2_center_bracket_v0.gcode  notes.md
scripts/: convert-to-ppm.py  images.json
scripts/object-class-example/: CMakeLists.txt
scripts/object-class-example/data/images/: atl.ppm  cha.ppm  cle.ppm  dal.ppm  den.ppm  det.ppm  ind.ppm  lac.ppm  lal.ppm  mem.ppm  no.ppm  ny.ppm  okc.ppm  phi.ppm  sa.ppm  utah.ppm  wsh.ppm
scripts/object-class-example/src/: BaseObject.cpp  BaseObject.h  DisplayManager.cpp  DisplayManager.h  ImageObject.cpp  ImageObject.h  ImageUtility.cpp  ImageUtility.h  MultiObject.cpp  MultiObject.h  ObjectGroup.cpp  ObjectGroup.h  ObjectGroupManager.cpp  ObjectGroupManager.h  ObjectType.cpp  ObjectType.h  TextObject.cpp  TextObject.h  main.cpp
src/: main.py  nba.py  nfl.py  requirements.txt  utilities.py
src/led-app/: CMakeLists.txt  led-app
src/led-app/data/images/: bkn.ppm  bos.ppm  chi.ppm  gs.ppm  hou.ppm  mia.ppm  mil.ppm  min.ppm  orl.ppm  phx.ppm  por.ppm  sac.ppm  tor.ppm
src/led-app/src/: BaseObject.cpp  BaseObject.h  DisplayManager.cpp  DisplayManager.h  DisplayObject.cpp  DisplayObject.h  ImageObject.cpp  ImageObject.h  ImageUtility.cpp  ImageUtility.h  MultiObject.cpp  MultiObject.h  ObjectGroup.cpp  ObjectGroup.h  ObjectGroupManager.cpp  ObjectGroupManager.h  ObjectType.cpp  ObjectType.h  TextObject.cpp  TextObject.h  example.json  json.hpp  main.cpp  main_Old.cpp
src/led-app/tests/: test_dummy.cpp
src/sports/: __init__.py  base.py  nba.py  nfl.py
test-ui/: package-lock.json  package.json
test-ui/public/: index.html
test-ui/src/: App.js  AppTest.js  OldApp.js  Utilities.js  index.js
test-ui/src/Components/: DynamicDisplay.js  GeneralSettings.js  SportsSettings.js
toolchains/: raspberry-pi.cmake
web/: index.html
web/static/: style.css  ticker.js
